--- a/uhl.shannon/sftp-config.json
+++ b/uhl.shannon/sftp-config.json
@@ -16,7 +16,7 @@
     
     "host": "shannonuhl.com",
     "user": "shannon@shannonuhl.com",
-    "password": "PurpleMe22!!",
+    "password": "Password11!!shannon",
     //"port": "22",
     
     "remote_path": "/",
