--- a/uhl.shannon/sftp-config.json
+++ b/uhl.shannon/sftp-config.json
@@ -3,7 +3,7 @@
     // Visit https://codexns.io/products/sftp_for_subime/settings for help
     
     // sftp, ftp or ftps
-    "type": "ftp",
+    "type": "ftps",
 
     "save_before_upload": true,
     "upload_on_save": true,
